--- a/search_page_date.html
+++ b/search_page_date.html
@@ -1131,7 +1131,7 @@
       <div id="u249" class="ax_default primary_button" data-label="Search">
         <div id="u249_div" class=""></div>
         <div id="u249_text" class="text ">
-          <p><span>Search Again</span></p>
+          <p><span> Search </span></p>
         </div>
       </div>
 
